--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axelraag/next-type-safe-routes",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Never should your users experience broken links again!",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,6 +9,7 @@
     "bin",
     "plugin.js"
   ],
+  "bin": "dist/postinstall-generation.js",
   "scripts": {
     "build": "tsc",
     "prepare": "yarn build",
@@ -31,16 +32,16 @@
     "walk-sync": "^2.2.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.21",
+    "@types/jest": "^29.2.5",
     "@types/node": "^14.14.34",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "commander": "^7.1.0",
     "eslint": "^8.7.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^26.6.3",
+    "jest": "^29.3.1",
     "prettier": "^2.5.1",
-    "ts-jest": "^26.5.4",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.5.5"
   },
   "repository": {
